# cseed

./: .gitmodules  Makefile.am  Makefile.in  autogen.sh  configure.ac  get_submodules.sh  redo.sh
doc/: Doxyfile.in  Makefile.am
include/cseed/: cseed.h  macros.h.in
include/spot/: macros.h.in  spot.h
source/: cseed.c  main.c  spot.c
